--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 .attribution {
   font-size: 11px;
   text-align: center;
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  right: 0;
 }
 
 .attribution a {
@@ -14,7 +18,6 @@
 
 body {
   background-color: hsl(185, 76%, 39%);
-  overflow: hidden;
   font-family: 'Kumbh Sans', sans-serif;
   box-sizing: border-box;
 }
@@ -25,6 +28,7 @@ section.pudlo {
   position: relative;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 }
 
 section svg {
@@ -35,14 +39,12 @@ section svg {
 svg:nth-of-type(1) {
   top: 0;
   left: 0;
-  /* transform: translate(-50%, -50%); */
   transform: translate(-70%, -57%);
 }
 
 svg:nth-of-type(2) {
   bottom: 0;
   right: 0;
-  /* transform: translate(50%, 50%); */
   transform: translate(63%, 60%);
 }
 
@@ -59,6 +61,7 @@ div.profil {
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  box-shadow: 0.1em 0.1em 2em 0.1em rgb(0, 0, 0, .5);
 }
 
 div.profil div.s1 {
@@ -161,10 +164,10 @@ div.s3 p:nth-of-type(3) {
 @media(min-width:1000px) and (orientation: landscape) {
 
   section.pudlo svg.tlo1 {
-    transform: translate(-30%, -50%);
+    transform: translate(-20%, -55%)
   }
 
   section.pudlo svg.tlo2 {
-    transform: translate(30%, 50%);
+    transform: translate(15%, 65%);
   }
 }
